dirPagination: add autoHide check to default template
see https://github.com/michaelbromley/angularUtils/issues/198

--- a/src/directives/pagination/dirPagination.tpl.html
+++ b/src/directives/pagination/dirPagination.tpl.html
@@ -1,4 +1,4 @@
-<ul class="pagination" ng-if="1 < pages.length">
+<ul class="pagination" ng-if="1 < pages.length || !autoHide">
     <li ng-if="boundaryLinks" ng-class="{ disabled : pagination.current == 1 }">
         <a href="" ng-click="setCurrent(1)">&laquo;</a>
     </li>
