--- a/src/directives/pagination/dirPagination.tpl.html
+++ b/src/directives/pagination/dirPagination.tpl.html
@@ -1,18 +1,29 @@
-<ul class="pagination" ng-if="1 < pages.length || !autoHide">
-    <li ng-if="boundaryLinks" ng-class="{ disabled : pagination.current == 1 }">
-        <a href="" ng-click="setCurrent(1)">&laquo;</a>
-    </li>
-    <li ng-if="directionLinks" ng-class="{ disabled : pagination.current == 1 }">
-        <a href="" ng-click="setCurrent(pagination.current - 1)">&lsaquo;</a>
-    </li>
-    <li ng-repeat="pageNumber in pages track by tracker(pageNumber, $index)" ng-class="{ active : pagination.current == pageNumber, disabled : pageNumber == '...' }">
-        <a href="" ng-click="setCurrent(pageNumber)">{{ pageNumber }}</a>
-    </li>
-
-    <li ng-if="directionLinks" ng-class="{ disabled : pagination.current == pagination.last }">
-        <a href="" ng-click="setCurrent(pagination.current + 1)">&rsaquo;</a>
-    </li>
-    <li ng-if="boundaryLinks"  ng-class="{ disabled : pagination.current == pagination.last }">
-        <a href="" ng-click="setCurrent(pagination.last)">&raquo;</a>
-    </li>
-</ul>
+<nav aria-label="Page navigation">
+  <ul class="pagination" ng-if="1 < pages.length || !autoHide">
+      <li class="page-item" ng-if="boundaryLinks" ng-class="{ disabled : pagination.current == 1 }">
+        <a ng-click="setCurrent(1)" class="page-link" href="" aria-label="Previous">
+          <span aria-hidden="true">&laquo;</span>
+          <span class="sr-only">First</span>
+        </a>
+      </li>
+      <li class="page-item" ng-if="directionLinks" ng-class="{ disabled : pagination.current == 1 }">
+        <a ng-click="setCurrent(pagination.current - 1)" class="page-link" href="" aria-label="Previous">
+          <span aria-hidden="true">&lsaquo;</span>
+          <span class="sr-only">Previous</span>
+        </a>
+      </li>
+      <li class="page-item" ng-repeat="pageNumber in pages track by tracker(pageNumber, $index)" ng-class="{ active : pagination.current == pageNumber, disabled : pageNumber == '...' }"><a class="page-link" href="" ng-click="setCurrent(pageNumber)">{{ pageNumber }}</a></li>
+      <li class="page-item" ng-if="directionLinks" ng-class="{ disabled : pagination.current == pagination.last }">
+        <a ng-click="setCurrent(pagination.current + 1)" class="page-link" href="" aria-label="Next">
+          <span aria-hidden="true">&rsaquo;</span>
+          <span class="sr-only">Next</span>
+        </a>
+      </li>
+      <li class="page-item" ng-if="boundaryLinks"  ng-class="{ disabled : pagination.current == pagination.last }">
+        <a class="page-link" href="#" aria-label="Next" ng-click="setCurrent(pagination.last)">
+          <span aria-hidden="true">&raquo;</span>
+          <span class="sr-only">Last</span>
+        </a>
+      </li>
+    </ul>
+</nav>
